--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <link rel="stylesheet" href="css/bootstrap-colorpicker.min.css">
 <link rel="stylesheet" href="css/iwebz.css">
 <link href="css/styles.less" rel="stylesheet/less" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
+<!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+ -->
 
 <body>
 <div class="overlayNav"></div>
@@ -90,7 +90,7 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>115</span></span>
+				<span class="accName">AC: <span>500452</span></span>
 				<div class="listBlock">
 						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 99.90%</span>
 				</div>		
@@ -101,7 +101,7 @@
 			</div>
 		</a>
 
-		<a class="listHolding  bg-red" href="#Holding/asset/115">
+		<a class="listHolding bg-default" href="#Holding/asset/115">
 			<div class="col-xs-6">
 				<span class="marketvalue">$205,000</span>
 				<span class="lcy"><i class="fa fa-rupee"></i> 
@@ -109,9 +109,9 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>116</span></span>
+				<span class="accName">AC: <span>500454</span></span>
 				<div class="listBlock">
-						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
+						<span class="gainloss_perc">0%</span>
 				</div>		
 			</div>
 
@@ -121,7 +121,7 @@
 		</a>
 
 
-		<a class="listHolding  bg-green" href="#Holding/asset/115">
+		<a class="listHolding  bg-red" href="#Holding/asset/115">
 			<div class="col-xs-6">
 				<span class="marketvalue">$530,000</span>
 				<span class="lcy"><i class="fa fa-rupee"></i> 
@@ -129,9 +129,9 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>117</span></span>
-				<div class="listBlock bg-green">
-						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
+				<span class="accName">AC: <span>117</span></span>
+				<div class="listBlock">
+						<span class="gainloss_perc"><i class="fa fa-caret-down"></i> -10%</span>
 				</div>		
 			</div>
 
@@ -149,47 +149,7 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>115</span></span>
-				<div class="listBlock bg-green">
-						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
-				</div>		
-			</div>
-
-			<div class="holdingLink">
-				<i class="fa fa-angle-right"></i>
-			</div>
-		</a>
-
-
-		<a class="listHolding  bg-green" href="#Holding/asset/115">
-			<div class="col-xs-6">
-				<span class="marketvalue">$530,000</span>
-				<span class="lcy"><i class="fa fa-rupee"></i> 
-				<span>1,273,356 </span>
-				</span>
-			</div>
-			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>117</span></span>
-				<div class="listBlock bg-green">
-						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
-				</div>		
-			</div>
-
-			<div class="holdingLink">
-				<i class="fa fa-angle-right"></i>
-			</div>
-		</a>
-
-
-		<a class="listHolding  bg-green" href="#Holding/asset/115">
-			<div class="col-xs-6">
-				<span class="marketvalue">$44,449,145.45</span>
-				<span class="lcy"><i class="fa fa-rupee"></i> 
-				<span>1,273,356 </span>
-				</span>
-			</div>
-			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>115</span></span>
+				<span class="accName">AC: <span>115</span></span>
 				<div class="listBlock bg-green">
 						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
 				</div>		
@@ -209,7 +169,7 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>117</span></span>
+				<span class="accName">AC: <span>117</span></span>
 				<div class="listBlock bg-green">
 						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
 				</div>		
@@ -229,7 +189,47 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>115</span></span>
+				<span class="accName">AC: <span>115</span></span>
+				<div class="listBlock bg-green">
+						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
+				</div>		
+			</div>
+
+			<div class="holdingLink">
+				<i class="fa fa-angle-right"></i>
+			</div>
+		</a>
+
+
+		<a class="listHolding  bg-green" href="#Holding/asset/115">
+			<div class="col-xs-6">
+				<span class="marketvalue">$530,000</span>
+				<span class="lcy"><i class="fa fa-rupee"></i> 
+				<span>1,273,356 </span>
+				</span>
+			</div>
+			<div class="col-xs-5">
+				<span class="accName">AC: <span>117</span></span>
+				<div class="listBlock bg-green">
+						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
+				</div>		
+			</div>
+
+			<div class="holdingLink">
+				<i class="fa fa-angle-right"></i>
+			</div>
+		</a>
+
+
+		<a class="listHolding  bg-green" href="#Holding/asset/115">
+			<div class="col-xs-6">
+				<span class="marketvalue">$44,449,145.45</span>
+				<span class="lcy"><i class="fa fa-rupee"></i> 
+				<span>1,273,356 </span>
+				</span>
+			</div>
+			<div class="col-xs-5">
+				<span class="accName">AC: <span>115</span></span>
 				<div class="listBlock bg-green">
 						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
 				</div>		
@@ -247,7 +247,7 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>117</span></span>
+				<span class="accName">AC: <span>117</span></span>
 				<div class="listBlock bg-green">
 						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
 				</div>		
@@ -267,7 +267,7 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>115</span></span>
+				<span class="accName">AC: <span>115</span></span>
 				<div class="listBlock bg-green">
 						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
 				</div>		
@@ -285,7 +285,7 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>117</span></span>
+				<span class="accName">AC: <span>117</span></span>
 				<div class="listBlock bg-green">
 						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
 				</div>		
@@ -305,7 +305,7 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>115</span></span>
+				<span class="accName">AC: <span>115</span></span>
 				<div class="listBlock bg-green">
 						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
 				</div>		
@@ -323,7 +323,7 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>117</span></span>
+				<span class="accName">AC: <span>117</span></span>
 				<div class="listBlock bg-green">
 						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
 				</div>		
@@ -343,7 +343,7 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>115</span></span>
+				<span class="accName">AC: <span>115</span></span>
 				<div class="listBlock bg-green">
 						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
 				</div>		
@@ -361,7 +361,7 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>117</span></span>
+				<span class="accName">AC: <span>117</span></span>
 				<div class="listBlock bg-green">
 						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
 				</div>		
@@ -381,7 +381,7 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>115</span></span>
+				<span class="accName">AC: <span>115</span></span>
 				<div class="listBlock bg-green">
 						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
 				</div>		
@@ -399,7 +399,7 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>117</span></span>
+				<span class="accName">AC: <span>117</span></span>
 				<div class="listBlock bg-green">
 						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
 				</div>		
@@ -419,7 +419,7 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>115</span></span>
+				<span class="accName">AC: <span>115</span></span>
 				<div class="listBlock bg-green">
 						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
 				</div>		
@@ -437,7 +437,7 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>117</span></span>
+				<span class="accName">AC: <span>117</span></span>
 				<div class="listBlock bg-green">
 						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
 				</div>		
@@ -457,7 +457,7 @@
 				</span>
 			</div>
 			<div class="col-xs-5">
-				<span class="accName">Ac No.: <span>115</span></span>
+				<span class="accName">AC: <span>115</span></span>
 				<div class="listBlock bg-green">
 						<span class="gainloss_perc"><i class="fa fa-caret-up"></i> 0%</span>
 				</div>		
